# agentic-rag-chatbot

./: .gitignore  README.md  docker-compose.yml
api-gateway/: Dockerfile  pom.xml
api-gateway/src/main/java/tech/hariprasath/apigateway/: ApiGatewayApplication.java
api-gateway/src/main/java/tech/hariprasath/apigateway/advice/: GlobalExceptionHandler.java
api-gateway/src/main/java/tech/hariprasath/apigateway/config/: RouteConfig.java  WebConfig.java
api-gateway/src/main/java/tech/hariprasath/apigateway/filter/: JwtFilter.java
api-gateway/src/main/resources/: application.properties
api-gateway/src/test/java/tech/hariprasath/apigateway/: ApiGatewayApplicationTests.java
auth-service/: Dockerfile  pom.xml
auth-service/src/main/java/tech/hariprasath/authservice/: AuthServiceApplication.java
auth-service/src/main/resources/: application.properties
auth-service/src/test/java/tech/hariprasath/authservice/: AuthServiceApplicationTests.java
chat-app/: package-lock.json  package.json
chat-app/src/: App.tsx  index.css
chat-app/src/api/: axios-instance.ts  index.ts
chat-app/src/components/: auth-popup.tsx  button.tsx  chat-text-area.tsx  conversation-area.tsx  error-message.tsx  header.tsx  input.tsx  loader.tsx  messages.tsx  password-field.tsx
chat-app/src/hooks/: use-popup-model.tsx
chat-app/src/pages/: chat-interface.tsx
webbot-service/: Dockerfile  pyproject.toml  requirements.txt
webbot-service/src/: app.py
webbot-service/src/ai_agent/: web_search_agent.py
webbot-service/src/model/: dto.py
webbot-service/src/tools/: web_tools.py
(+23 files in other folders)
