[project]
name = "webbot-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.10.0",
    "fastapi>=0.127.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-google-genai>=4.1.2",
    "langchainhub>=0.1.21",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]
